--- a/K/boxmodel-student.css
+++ b/K/boxmodel-student.css
@@ -22,7 +22,6 @@ header, footer {
 h1 {
 	background-color: #8c4646;
 	padding: 30px;
-
 }
 
 nav {
@@ -30,30 +29,21 @@ nav {
 	padding: 15px;
 	margin-left: 30px;
 	margin-right: 30px;
-
-
 }
 
 nav a {
 	color: #FFF;
-
 }
 
 #content {
 	background-color: #f2e394;
-	margin-left: 30px;
-	margin-right: 30px;
-	margin-top: 30px;
-  margin-bottom: 30px;
+	margin: 30px;
 	padding: 30px;
-
-
 }
 
 #content > header{
 	background-color: #8c4646;;
 	padding:5px;
-
 }
 
 article {
