Background with image

--- a/K/boxmodel-student.css
+++ b/K/boxmodel-student.css
@@ -1,5 +1,7 @@
 body {
 	background-color: #333;
+	background-image: url("/home/student/www/K/sep09.jpg");
+	background-size: cover;
 }
 
 #wrapper {
