--- a/16_JS/style.css
+++ b/16_JS/style.css
@@ -1,8 +1,10 @@
-table {
+
+table, .button-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 
 td {
     border: 1px solid black;
